--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/AbandonedArcadeWeb.loader.js";
       var config = {
-        dataUrl: buildUrl + "/AbandonedArcadeWeb.data.br",
-        frameworkUrl: buildUrl + "/AbandonedArcadeWeb.framework.js.br",
-        codeUrl: buildUrl + "/AbandonedArcadeWeb.wasm.br",
+        dataUrl: buildUrl + "/AbandonedArcadeWeb.data",
+        frameworkUrl: buildUrl + "/AbandonedArcadeWeb.framework.js",
+        codeUrl: buildUrl + "/AbandonedArcadeWeb.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "AbandonedArcade",
